# exiv2-sharp

./: .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
docs/: Makefile.am  index.xml  ns-Exiv2.xml
docs/Exiv2/: ExifData.xml  ExifDatum.xml  ExifDatumIterator.xml  ExifKey.xml  ExifThumb.xml  Image.xml  ImageFactory.xml  Key.xml  Nikon1MakerNote.xml  Nikon2MakerNote.xml  Nikon3MakerNote.xml  OpenCompletedEventArgs.xml  OpenCompletedEventHandler.xml  Rational.xml  TagInfo.xml  URational.xml  XmpData.xml  XmpDatum.xml  XmpDatumIterator.xml  XmpKey.xml
exiv2/: .gitignore  ChangeLog  DataBuf.custom  ExifData.custom  ExifDatum.custom  ExifDatumIterator.custom  ExifTags.custom  ExifThumb.custom  Exiv2.metadata  IfdId.cs  Image.custom  ImageFactory.custom  IptcData.custom  IptcDatum.custom  Makefile.am  Nikon1MakerNote.custom  Nikon2MakerNote.custom  Nikon3MakerNote.custom  OpenCompletedEventArgs.cs  OpenCompletedEventHandler.cs  PreviewImage.custom  Rational.cs  URational.cs  XmpData.custom  XmpDatum.custom  exiv2-api.raw
glue/: ChangeLog  Makefile.am  exiv2-databuf-private.h  exiv2-databuf.cpp  exiv2-databuf.h  exiv2-exifdata-private.h  exiv2-exifdata.cpp  exiv2-exifdata.h  exiv2-exifdatum-iterator-private.h  exiv2-exifdatum-iterator.cpp  exiv2-exifdatum-iterator.h  exiv2-exifdatum-private.h  exiv2-exifdatum.cpp  exiv2-exifdatum.h  exiv2-exifkey-private.h  exiv2-exifkey.cpp  exiv2-exifkey.h  exiv2-exiftags.cpp  exiv2-exiftags.h  exiv2-exifthumb-private.h  exiv2-exifthumb.cpp  exiv2-exifthumb.h  exiv2-ifdid.h  exiv2-image-private.h  exiv2-image.cpp  exiv2-image.h  exiv2-imagefactory.cpp  exiv2-imagefactory.h  exiv2-iptcdata-private.h  exiv2-iptcdata.cpp  exiv2-iptcdata.h  exiv2-iptcdatum-iterator-private.h  exiv2-iptcdatum-iterator.cpp  exiv2-iptcdatum-iterator.h  exiv2-iptcdatum-private.h  exiv2-iptcdatum.cpp  exiv2-iptcdatum.h  exiv2-iptckey-private.h  exiv2-iptckey.cpp  exiv2-iptckey.h  (+38 more)
samples/: .gitignore  AddModel  AddModel.cs  ChangeLog  ExifComment  ExifComment.cs  ExifPrint  ExifPrint.cs  ExifThumb  ExifThumb.cs  ImageInfo  ImageInfo.cs  IptcSample.cs  Makefile.am  Previews  Previews.cs  XmpSample  XmpSample.cs  exifprint.c
sources/: Makefile  Makefile.am  exiv2-sharp-sources.xml
tests/: Makefile.am
tests/data/: Makefile.am
tests/src/: .gitignore  ChangeLog  ExifTags.cs  ExifThumb.cs  Image.cs  ImageFactory.cs  Makefile.am  NikonMakerNote.cs
