lib_LTLIBRARIES = libexiv2glue.la

INCLUDES =				\
	$(EXIV2_CFLAGS)			\
	$(GLIB_CFLAGS)			\
	$(GOBJECT_CFLAGS)

libexiv2glue_la_SOURCES =			\
	exiv2-databuf.cpp			\
	exiv2-databuf.h				\
	exiv2-databuf-private.h			\
	exiv2-exifdata.cpp			\
	exiv2-exifdata.h			\
	exiv2-exifdata-private.h		\
	exiv2-exifdatum.cpp			\
	exiv2-exifdatum.h			\
	exiv2-exifdatum-private.h		\
	exiv2-exifdatum-iterator.cpp		\
	exiv2-exifdatum-iterator.h		\
	exiv2-exifdatum-iterator-private.h	\
	exiv2-exifkey.cpp			\
	exiv2-exifkey.h				\
	exiv2-exifkey-private.h			\
	exiv2-exifthumb.cpp			\
	exiv2-exifthumb.h			\
	exiv2-exifthumb-private.h		\
	exiv2-image.cpp				\
	exiv2-image.h				\
	exiv2-image-private.h			\
	exiv2-imagefactory.cpp			\
	exiv2-imagefactory.h			\
	exiv2-key.cpp				\
	exiv2-key.h				\
	exiv2-xmpdata.cpp			\
	exiv2-xmpdata.h				\
	exiv2-xmpdata-private.h			\
	exiv2-xmpdatum.cpp			\
	exiv2-xmpdatum.h			\
	exiv2-xmpdatum-private.h		\
	exiv2-xmpdatum-iterator.cpp		\
	exiv2-xmpdatum-iterator.h		\
	exiv2-xmpdatum-iterator-private.h	\
	exiv2-xmpkey.cpp			\
	exiv2-xmpkey.h				\
	exiv2-xmpkey-private.h

libexiv2glue_la_INCLUDES =		\
	exiv2-exifdata.h		\
	exiv2-image.h			\
	exiv2-imagefactory.h

libexiv2glue_la_LIBADD =		\
	$(EXIV2_LIBS)			\
	$(GLIB_LIBS)			\
	$(GOBJECT_LIBS)
	

