lib_LTLIBRARIES = libexiv2glue.la

INCLUDES =				\
	$(EXIV2_CFLAGS)			\
	$(GLIB_CFLAGS)			\
	$(GOBJECT_CFLAGS)

CFLAGS = -g

libexiv2glue_la_SOURCES =			\
	exiv2-databuf.cpp			\
	exiv2-databuf.h				\
	exiv2-databuf-private.h			\
	exiv2-exifdata.cpp			\
	exiv2-exifdata.h			\
	exiv2-exifdata-private.h		\
	exiv2-exifdatum.cpp			\
	exiv2-exifdatum.h			\
	exiv2-exifdatum-private.h		\
	exiv2-exifdatum-iterator.cpp		\
	exiv2-exifdatum-iterator.h		\
	exiv2-exifdatum-iterator-private.h	\
	exiv2-exifkey.cpp			\
	exiv2-exifkey.h				\
	exiv2-exifkey-private.h			\
	exiv2-exiftags.cpp			\
	exiv2-exiftags.h			\
	exiv2-exifthumb.cpp			\
	exiv2-exifthumb.h			\
	exiv2-exifthumb-private.h		\
	exiv2-ifdid.h				\
	exiv2-image.cpp				\
	exiv2-image.h				\
	exiv2-image-private.h			\
	exiv2-imagefactory.cpp			\
	exiv2-imagefactory.h			\
	exiv2-iptcdata.cpp			\
	exiv2-iptcdata.h			\
	exiv2-iptcdata-private.h		\
	exiv2-iptcdatum.cpp			\
	exiv2-iptcdatum.h			\
	exiv2-iptcdatum-iterator.cpp		\
	exiv2-iptcdatum-iterator.h		\
	exiv2-iptcdatum-iterator-private.h	\
	exiv2-iptcdatum-private.h		\
	exiv2-iptckey.cpp			\
	exiv2-iptckey.h				\
	exiv2-iptckey-private.h			\
	exiv2-key.cpp				\
	exiv2-key.h				\
	exiv2-nikon1makernote.cpp		\
	exiv2-nikon1makernote.h			\
	exiv2-nikon2makernote.cpp		\
	exiv2-nikon2makernote.h			\
	exiv2-nikon3makernote.cpp		\
	exiv2-nikon3makernote.h			\
	exiv2-previewimage.cpp			\
	exiv2-previewimage.h			\
	exiv2-previewimage-private.h		\
	exiv2-previewmanager.cpp		\
	exiv2-previewmanager.h			\
	exiv2-previewmanager-private.h		\
	exiv2-previewproperties.cpp		\
	exiv2-previewproperties.h		\
	exiv2-previewproperties-private.h	\
	exiv2-rational.cpp			\
	exiv2-rational.h			\
	exiv2-rational-private.h		\
	exiv2-taginfo.cpp			\
	exiv2-taginfo.h				\
	exiv2-taginfo-private.h			\
	exiv2-urational.cpp			\
	exiv2-urational.h			\
	exiv2-urational-private.h		\
	exiv2-xmpdata.cpp			\
	exiv2-xmpdata.h				\
	exiv2-xmpdata-private.h			\
	exiv2-xmpdatum.cpp			\
	exiv2-xmpdatum.h			\
	exiv2-xmpdatum-private.h		\
	exiv2-xmpdatum-iterator.cpp		\
	exiv2-xmpdatum-iterator.h		\
	exiv2-xmpdatum-iterator-private.h	\
	exiv2-xmpkey.cpp			\
	exiv2-xmpkey.h				\
	exiv2-xmpkey-private.h

libexiv2glue_la_INCLUDES =		\
	exiv2-exifdata.h		\
	exiv2-image.h			\
	exiv2-imagefactory.h

libexiv2glue_la_LIBADD =		\
	$(EXIV2_LIBS)			\
	$(GLIB_LIBS)			\
	$(GOBJECT_LIBS)
	

